@@ -5575,6 +5575,8 @@ part
     programlockpolltimeout = 5;
 
     memory "eeprom"
+        paged           = no;
+        page_size       = 4;
         size            = 256;
         min_write_delay = 3600;
         max_write_delay = 3600;
@@ -5589,6 +5591,16 @@ part
                           "  0   0   0   x      x   x   x   x",
                           " a7  a6  a5  a4     a3  a2  a1  a0", 
                           "  i   i   i   i      i   i   i   i";
+
+	loadpage_lo	= "  1   1   0   0      0   0   0   1",
+			  "  0   0   0   0      0   0   0   0",
+			  "  0   0   0   0      0   0  a1  a0",
+			  "  i   i   i   i      i   i   i   i";
+
+	writepage	= "  1   1   0   0      0   0   1   0",
+			  "  0   0   x   x      x   x   x   x",
+			  " a7  a6  a5  a4     a3  a2   0   0",
+			  "  x   x   x   x      x   x   x   x";
 
 	mode		= 0x41;
 	delay		= 5;
@@ -5734,6 +5746,8 @@ part
     programlockpolltimeout = 5;
 
     memory "eeprom"
+        paged           = no;
+        page_size       = 4;
         size            = 512;
         min_write_delay = 3600;
         max_write_delay = 3600;
@@ -5748,6 +5762,16 @@ part
                           "  0   0   0   x      x   x   x  a8",
                           " a7  a6  a5  a4     a3  a2  a1  a0", 
                           "  i   i   i   i      i   i   i   i";
+
+	loadpage_lo	= "  1   1   0   0      0   0   0   1",
+			  "  0   0   0   0      0   0   0   0",
+			  "  0   0   0   0      0   0  a1  a0",
+			  "  i   i   i   i      i   i   i   i";
+
+	writepage	= "  1   1   0   0      0   0   1   0",
+			  "  0   0   x   x      x   x   x  a8",
+			  " a7  a6  a5  a4     a3  a2   0   0",
+			  "  x   x   x   x      x   x   x   x";
 
 	mode		= 0x41;
 	delay		= 5;
@@ -5903,6 +5927,8 @@ part
     programlockpolltimeout = 5;
 
     memory "eeprom"
+        paged           = no;
+        page_size       = 4;
         size            = 512;
         min_write_delay = 3600;
         max_write_delay = 3600;
@@ -5917,6 +5943,21 @@ part
                           " 0 0 0 x x x x a8",
                           " a7 a6 a5 a4 a3 a2 a1 a0",
                           " i i i i i i i i";
+
+	loadpage_lo	= "  1   1   0   0      0   0   0   1",
+			  "  0   0   0   0      0   0   0   0",
+			  "  0   0   0   0      0   0  a1  a0",
+			  "  i   i   i   i      i   i   i   i";
+
+	writepage	= "  1   1   0   0      0   0   1   0",
+			  "  0   0   x   x      x   x   x  a8",
+			  " a7  a6  a5  a4     a3  a2   0   0",
+			  "  x   x   x   x      x   x   x   x";
+
+	mode		= 0x41;
+	delay		= 5;
+	blocksize	= 4;
+	readsize	= 256;
         ;
 
     memory "flash"
